# cell2sentence4longevity

./: .env.template  .gitignore  AGENTS.md  BATCH_PROCESSING.md  README.md  agent.md  batch_extract.json  examples.sh  extract.json  main.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
data/shared/: cellxgene_collections_cache.parquet  hgnc_complete_set.parquet  hgnc_mappers.parquet
data/shared/gene_lists/: clock_product_2k_top_genes.txt  opengenes.txt
demo_logging/data/: chunk_0000.parquet
demo_logging/logs/: demo.json
docs/: BATCH_TESTING.md  DATASET_CARD.md  DONOR_LEVEL_SPLIT.md  EXPLORE_CLI.md  FILE_SIZE_LIMIT.md  GENE_LIST_FILTERING.md  GENE_LIST_FILTERING_CHANGELOG.md  LOGGING.md  LOGGING_IMPLEMENTATION.md  MIGRATION.md  ONE_STEP_MIGRATION.md  REFACTORING_SUMMARY.md
examples/: demo_file_size_limit.py  demo_logging.py  test_logging.py
notebooks/: explore_latest_test.ipynb
preprocessing/aida_preprocessing_pipeline/: .gitignore  01_create_hgnc_mapper.py  02_convert_h5ad_to_parquet.py  03_add_age_and_cleanup.py  04_create_train_test_split.py  05_upload_to_huggingface.py  LICENSE  README.md  requirements.txt  run_all.sh
src/cell2sentence4longevity/: __init__.py  cleanup.py  cli.py  explore.py  preprocess.py
src/cell2sentence4longevity/benchmarks/: __init__.py  (+1 more)
tests/: README.md  __init__.py  cleanup.py  test_donor_split.py  test_explore_cli.py  test_explore_streaming_parity.py  test_file_size_integration.py  test_file_size_limit.py  test_integration.py  test_obs_stream_nullable.py  test_preprocess_streaming_parity.py
(+10 files in other folders)
