[project]
name = "cell2sentence4longevity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.10",
    "polars>=1.35.2",
    "scanpy>=1.11.5",
]

[project.scripts]
cell2sentence4longevity = "cell2sentence4longevity:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
